# MCP

.claude/: settings.local.json
MinerU_MCP_Server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.bat  deploy.sh  docker-compose.yml  healthcheck.sh  logrotate.conf  mineru-mcp.service  nginx.conf  pyproject.toml  supervisor.conf
MinerU_MCP_Server/src/mineru_mcp_server/: __init__.py  server.py
Pandoc_MCP_Server/: .gitignore  README.md  publish.bat  publish.sh  pyproject.toml
Pandoc_MCP_Server/.github/workflows/: publish.yml  test-publish.yml  test.yml
