[project]
name = "mineru-mcp-server"
version = "0.1.0"
description = "An MCP server for MinerU document parsing (PDF, PPT, Word, Images to Markdown)."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0"
]

[project.scripts]
mineru-mcp = "mineru_mcp_server.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
